[package]
name = "orgasm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
redis = "0.27.2"
bb8-redis = "0.17.0"
